retrieval and viewing of stored memory

--- a/views/campaigns/edit.hbs
+++ b/views/campaigns/edit.hbs
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 
-<form method='POST' action='/campaign/save'>
+<form method='POST' action='/campaigns/save'>
 
     <p> Key:
         <input type='text' name='campaignkey' value=''/>
