--- a/views/campaigns/view.hbs
+++ b/views/campaigns/view.hbs
@@ -1,5 +1,5 @@
 <h1>{{ title }}</h1>
 
-<h1>Key: {{ campaignkey }}</h1>
+<p>Key: {{ campaignkey }}</p>
 
-<h1>{{ campaigndetail }}</h1>
+<p>{{ campaigndetail }}</p>
