--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,9 +27,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/campaigns">Campaigns</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users">Profile</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0" method="post" action="/stock">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search Campaigns" aria-label="Search" name="ticker_input">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search Campaigns" aria-label="Search" name="campaign_input">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
