--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<br/><br/><br/>
+<div class="jumbotron">
+  <h1 class="display-4">Welcome to {{title}}</h1>
+  <p class="lead">If you're reading this, my app is at the very least running.</p>
+  <p>P.S. Please give me real money</p>
+</div>
