--- a/views/user-noprofile.hbs
+++ b/views/user-noprofile.hbs
@@ -1,1 +1,14 @@
-<p>It appears that you are not logged in.  <a href="/users/login">Log in, if you'd like.</a></p>
+<br/><br/><br/>
+<div class="h-100 row text-light">
+    <div class="col">
+        <br />
+        <div id="centerThis">
+            <form action="/users/login">
+                <div class="form-group">
+                    <h4>Who goes there?</h4><br/>
+                    <button type="submit" class="btn btn-warning">Identify Yourself.</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
