--- a/views/campaigns/view.hbs
+++ b/views/campaigns/view.hbs
@@ -1,5 +1,13 @@
-<h1>{{ title }}</h1>
+<br /><br /><br />
+<div class="h-100 row text-light">
+    <div class="col">
+        <br />
+        <div>
+            <h1>{{ title }}</h1>
 
-<p>Key: {{ campaignkey }}</p>
+            <p>Key: {{ campaignkey }}</p>
 
-<p>{{ campaigndetail }}</p>
+            <p>{{ campaigndetail }}</p>
+        </div>
+    </div>
+</div>
