removed campaign local memory

--- a/views/campaigns/view.hbs
+++ b/views/campaigns/view.hbs
@@ -1,6 +1,6 @@
 <br /><br /><br />
 <div class="h-100 row text-light">
-    <div class="col">
+    <div class="col parent">
         <br />
         <div>
             <h1>{{ title }}</h1>
@@ -8,6 +8,7 @@
             <p>Key: {{ campaignkey }}</p>
 
             <p>{{ campaigndetail }}</p>
+            <a href="/campaigns" class="btn btn-danger">Back to list</a>
         </div>
     </div>
 </div>
