--- a/views/campaigns/view.hbs
+++ b/views/campaigns/view.hbs
@@ -2,7 +2,7 @@
 <div class="h-100 row text-light">
     <div class="col parent">
         <br />
-        <div>
+        <div style="width: 80vw;">
             <h1>{{ title }}</h1>
 
             <p>Key: {{ campaignkey }}</p>
