--- a/views/user-noprofile.hbs
+++ b/views/user-noprofile.hbs
@@ -1,8 +1,8 @@
 <br/><br/><br/>
 <div class="h-100 row text-light">
-    <div class="col">
+    <div class="col parent">
         <br />
-        <div id="centerThis">
+        <div style="width: 80vw;">
             <form action="/users/login">
                 <div class="form-group">
                     <h4>Who goes there?</h4><br/>
