--- a/views/campaigns/index.hbs
+++ b/views/campaigns/index.hbs
@@ -2,20 +2,34 @@
 <div class="h-100 row text-light">
     <div class="col parent">
         <br />
-        <div>
+        <div style="width: 80vw;">
             <h1>{{title}}</h1>
             <br />
             <a href="/campaigns/add" class="btn btn-primary">Add New Campaign</a>
             <br /><br />
             <p>Here is a listing of all of the Campaigns</p>
             <br />
-            <div class="card" style="width: 18rem;">
+            {{#each campaignlist }}
+                <div class="card text-dark">
+                    <div class="card-header">
+                        {{ title }}
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Key: {{ key }}</h5>
+                        <p class="card-text">{{ campaigndetail }}</p>
+                        <a href="campaigns/view?key={{ key }}" class="btn btn-primary">View Campaign</a>
+                    </div>
+                </div>
+                <br />
+            {{/each}}
+
+            {{!-- <div class="card parent">
                 <ul class="list-group list-group-flush text-dark">
                     {{#each campaignlist }}
-                        <li class="list-group-item">{{ key }}: <a href="campaigns/view?key={{ key }}">{{ title }}</a></li>
+                    <li class="list-group-item">{{ key }}: <a href="campaigns/view?key={{ key }}">{{ title }}</a></li>
                     {{/each}}
                 </ul>
-            </div>
+            </div> --}}
         </div>
     </div>
 </div>
