--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -1,15 +1,17 @@
-<br/><br/><br/>
-<div class="h-100 row align-items-center text-light">
+<br /><br /><br />
+<div class="h-100 row text-light">
     <div class="col parent">
-        <br/>
-        <img src='{{user.userImage}}' style="border-radius: 50%; height: 50px; width: 50px; display: inline;"/>
-        <h4>{{ user.givenName }}'s Profile</h4>
+        <br />
+        <div style="width: 80vw;">
+            <img src='{{user.userImage}}' style="border-radius: 50%; height: 50px; width: 50px; display: inline;" />
+            <h4>{{ user.givenName }}'s Profile</h4>
 
-        <p>{{user.email}}</p>
+            <p>{{user.email}}</p>
 
-        <br/>
-        <form action="/users/logout">
+            <br />
+            <form action="/users/logout">
                 <button type="submit" class="btn btn-warning">Log out</button>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
