--- a/views/campaigns/index.hbs
+++ b/views/campaigns/index.hbs
@@ -21,6 +21,8 @@
                     </div>
                 </div>
                 <br />
+            {{else}}
+                <h3>Sorry bud, nowhere to donate your money yet :(</h3>
             {{/each}}
 
             {{!-- <div class="card parent">
