--- a/views/campaigns/view.hbs
+++ b/views/campaigns/view.hbs
@@ -16,7 +16,7 @@
                 <img src="https://svgshare.com/i/KL6.svg" alt="back icon" class="d-inline-block" width="20"
                     height="20" />
                 Back to list</a>
-            <a href="/campaigns/donate" class="btn btn-success">Make a donation</a>
+            <a href="/campaigns/donate?key={{ campaignkey }}" class="btn btn-success">Make a donation</a>
         </div>
     </div>
 </div>
