added donated by list

--- a/views/campaigns/index.hbs
+++ b/views/campaigns/index.hbs
@@ -17,6 +17,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Key: {{ key }}</h5>
                         <p class="card-text">{{ campaigndetail }}</p>
+                        <p>Goal Amount: ${{ goalAmount }}</p>
                         <a href="campaigns/view?key={{ key }}" class="btn btn-primary">View Campaign</a>
                     </div>
                 </div>
