not sure what changed but it works

--- a/views/campaigns/index.hbs
+++ b/views/campaigns/index.hbs
@@ -10,7 +10,7 @@
             <p>Here is a listing of all of the Campaigns</p>
             <br />
             {{#each campaignlist }}
-                <div class="card text-dark">
+                <div class="card text-dark text-center mx-auto" style="width: 50em;">
                     <div class="card-header">
                         {{ title }}
                     </div>
