--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,9 +38,9 @@
           <a class="nav-link" href="/users">User</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0" action="/search">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search Campaigns" aria-label="Search"
-          name="campaign_input">
+      <form class="form-inline my-2 my-lg-0" action="/campaigns/search" method="POST">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search Campaign by ID" aria-label="Search"
+          name="search_key">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
