--- a/views/payments/completed.hbs
+++ b/views/payments/completed.hbs
@@ -1,30 +1,24 @@
 <br /><br /><br />
-<div class="container">
-    <div class="row text-light">
-        <div class="col">
+<div class="h-100 row text-light">
+    <div class="col parent">
+        <br />
+        <div style="width: 80vw;">
             <h1>Donation Success!</h1>
-            <p>Thank you for your donation, details below.</p>
+            <p>Thank you for your donation, a lighter wallet is a happy wallet.</p>
             <br />
-            <a href="/campaigns/view?key={{ campaign_id }}" class="btn btn-danger">
-                <img src="https://svgshare.com/i/KL6.svg" alt="back icon" class="d-inline-block" width="20"
-                    height="20" />
-                Back to campaign</a>
-            <hr style="border: 1px solid white" />
-            Customer: <br />
-            {{#each customer}}
-
-            {{@key}}: {{this}} <br />
-
-            {{/each}}
-
-            <br /><br />
-
-            Charge: <br />
-            {{#each charge}}
-
-            {{@key}}: {{this}} <br />
-
-            {{/each}}
+            <div class="card bg-light text-dark text-center mx-auto" style="width: 18em;">
+                <div class="card-header">Payment Details</div>
+                <div class="card-body">
+                    <p class="card-text">Campaign ID: {{ campaign_id }}</p>
+                    <p class="card-text">Name: {{ customer }}</p>
+                    <p class="card-text">Total Charges: {{ charge }}</p>
+                    <a href="/campaigns/view?key={{ campaign_id }}" class="btn btn-danger">
+                        <img src="https://svgshare.com/i/KL6.svg" alt="back icon" class="d-inline-block" width="20" height="20" />
+                        Back
+                    </a>
+                    <a href="{{ receipt }}" class="btn btn-primary">View Full Receipt</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
